# mcp-server

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CLEANUP-SUMMARY.md  CREATE_PR_INSTRUCTIONS.md  Dockerfile  FINAL-CLEANUP-SUMMARY.md  LICENSE  MANIFEST.in  Makefile  OAUTH_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  README.md  RELEASING.md  STANDARDIZED_RESPONSES.md  cursor_mcp_config.json  dev-start.sh  docker-compose.dev.yml  docker-compose.lint.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  main.py.backup  pyproject.toml  requirements.txt  run_mcp_server.sh  start.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: README.md  api-drift-monitor.yml  automated-release.yml  ci.yml  claude-issue-to-pr.yml  claude-pr-implement.yml  claude-pr-review.yml  claude.yml  dependabot-auto-merge.yml  release.yml  security.yml  test.yml
archive/: test_balances.py
archive/tools/: __init__.py
archive/tools/justifi/: __init__.py  balances.py  core.py  payment_methods.py
docker/postgres/: init.sql
docs/: API-DRIFT-MONITORING.md  CUSTOMER-SETUP.md  DEPLOYMENT.md  EVAL-INTEGRATION-ROADMAP.md  JUSTIFI_WEB_COMPONENTS_SPECS.md  PRD-FastMCP-Migration.md  PRD-JustiFi-MCP-v1.1.md  PRD-JustiFi-MCP-v1.md  PRD-JustiFi-MCP-v2.0.md  PROTOTYPING_PLAN.md  STANDARDIZED_RESPONSES.md  VERSIONING.md  _Sidebar.md  endpoint-inventory.md  justifi-openapi.yaml  phase3-analysis-recommendations.md
eval/: README.md  payout_operations.jsonl  usage_patterns.jsonl
examples/: README.md  cursor_mcp_config.example.json  justifi_mcp.py  langchain_example.py  openai_example.py  web_chat.py
examples/langchain/: README.md  agent_workflows.py  basic_integration.py  production_patterns.py  simple_agent_example.py
examples/openai/: README.md  advanced_workflows.py  basic_integration.py  production_patterns.py
examples/web-components/: README.md  test-runner.js
examples/web-components/dashboard/: README.md  index.html
examples/web-components/embedded-checkout/: README.md  index.html  server.js
examples/web-components/tokenization/: README.md  index.html
justifi_mcp/: __init__.py  config.py  core.py  payouts.py  toolkit.py
justifi_mcp/adapters/: __init__.py  langchain.py  mcp.py
justifi_mcp/tools/: __init__.py  base.py  checkouts.py  disputes.py  payment_methods.py  payouts.py
modelcontextprotocol/: __init__.py  auto_register.py  config.py  dcr.py  main.py  oauth_metadata.py  server.py
modelcontextprotocol/middleware/: __init__.py  oauth.py
npx-wrapper/: .gitignore  .npmignore  .nycrc.json  README.md  TEST_SUMMARY.md  build.js  index.js  install.js  package.json  requirements.txt  wrapper.js
npx-wrapper/.github/workflows/: test.yml
npx-wrapper/test/: README.md  mocha.opts  setup.js  test-install.js  test-integration.js  test-runner.js  test-wrapper.js
python/: __init__.py  _version.py  config.py  core.py  toolkit.py
python/adapters/: __init__.py  langchain.py  schema_generator.py
python/tools/: __init__.py  balances.py  base.py  checkouts.py  checkouts_create.py  code_generators.py  disputes.py  payment_intents.py  payment_method_groups.py  payment_methods.py  payments.py  payments_create.py  payouts.py  proceeds.py  refunds.py  response_formatter.py  response_wrapper.py  sub_accounts.py  terminals.py
python/tools/utils/: __init__.py  environment.py  payment_security.py  security.py  test_cards.py
scripts/: check-api-drift.py  check-version-sync.sh  ci-drift-check.py  create-release-tag.sh  manual-release.sh  release-automated.sh  release.sh
tests/: __init__.py  conftest.py  test_auto_register.py  test_balance_tools.py  test_balances.py  test_checkout_tools.py  test_checkouts_create.py  test_client_configuration.py  test_client_retry.py  test_config.py  test_dispute_tools.py  test_environment_utils.py  test_full_integration.py  test_justifi.py  test_langchain.py  test_langchain_adapter.py  test_main.py  test_mcp_compliance.py  test_mcp_server_integration.py  test_oauth_metadata.py  test_oauth_middleware.py  test_payment_intents.py  test_payment_method_group_tools.py  test_payment_methods.py  test_payment_security.py  test_payment_tools.py  test_payments_create.py  test_payout_tools.py  test_payouts.py  test_proceed_tools.py  test_refund_tools.py  test_response_formatter.py  test_response_wrapper.py  test_schema_generator.py  test_security_utils.py  test_sub_account_tools.py  test_terminal_integration.py  test_terminal_tools.py  test_test_cards.py  test_toolkit.py
tools/: justifi.py
tools/justifi/: __init__.py  balances.py  core.py  payment_methods.py  payments.py  payouts.py
